[package]
name = "blog-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["multipart"] }
axum-test = "18.4.1"
chrono = "0.4.42"
config = { version = "0.15.19", features = ["toml"] }
dotenv = "0.15.0"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

[dev-dependencies]
axum-test = "18.4.1"
fake = { version = "4.4.0", features = ["chrono", "derive"] }
